[gd_scene load_steps=19 format=3 uid="uid://brqc2sau2ydpp"]

[ext_resource type="Script" path="res://Enemy/zombie.gd" id="1_wjffg"]
[ext_resource type="Texture2D" uid="uid://df5ieyfe5iefj" path="res://Enemy/Zombie.png" id="2_s0hl4"]
[ext_resource type="PackedScene" uid="uid://eumklq20br6p" path="res://HitboxHurtbox/hurtbox.tscn" id="3_g5x5g"]
[ext_resource type="PackedScene" uid="uid://bndo4ykdyxjg" path="res://Components/health_component.tscn" id="4_3gey4"]
[ext_resource type="PackedScene" uid="uid://wklk1b6afk2e" path="res://HitboxHurtbox/hitbox.tscn" id="5_qriko"]
[ext_resource type="PackedScene" uid="uid://bsbt48ke8dhhp" path="res://Components/attack_stats.tscn" id="6_h44nf"]

[sub_resource type="Animation" id="Animation_r58x3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_khcmp"]
resource_name = "attack"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_0pbaa"]
resource_name = "die"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_die_animation_finished"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_qu2yj"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_wvfst"]
resource_name = "walking"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8xfg"]
_data = {
"RESET": SubResource("Animation_r58x3"),
"attack": SubResource("Animation_khcmp"),
"die": SubResource("Animation_0pbaa"),
"idle": SubResource("Animation_qu2yj"),
"walking": SubResource("Animation_wvfst")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tgxnm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5fcxh"]
radius = 64.4981

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugsd8"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ar2hr"]
radius = 576.056

[sub_resource type="CircleShape2D" id="CircleShape2D_u6u5n"]
radius = 65.9697

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tt7gh"]
radius = 32.0
height = 112.0

[node name="Zombie" type="CharacterBody2D"]
script = ExtResource("1_wjffg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, -1.43051e-06)
scale = Vector2(4.41379, 4)
texture = ExtResource("2_s0hl4")
hframes = 13
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o8xfg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_tgxnm")
anim_player = NodePath("../AnimationPlayer")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_status") instance=ExtResource("3_g5x5g")]
collision_layer = 4
collision_mask = 2
health_status = NodePath("../HealthComponent")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_5fcxh")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = -77.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_ugsd8")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("4_3gey4")]
max_health = 10

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_ar2hr")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_u6u5n")

[node name="Hitbox" parent="." node_paths=PackedStringArray("attack_object") instance=ExtResource("5_qriko")]
attack_object = NodePath("../AttackStats")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(32, 0)
shape = SubResource("CapsuleShape2D_tt7gh")

[node name="AttackStats" parent="." instance=ExtResource("6_h44nf")]
damage = 1

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="hurt" from="HealthComponent" to="." method="_on_health_component_hurt"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
